--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
