--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "envalid": "^8.0.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
@@ -52,6 +51,7 @@
     "validator": "^13.12.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "zod": "^3.24.2"
   }
 }
