--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "redis": "^4.7.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "yamljs": "^0.3.0",
     "zod": "^3.24.2"
   }
 }
