--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "NODE_ENV=test vitest run",
+    "test:unit": "NODE_ENV=test vitest run --dir tests/unit",
+    "test:integration": "NODE_ENV=test vitest run --dir tests/integration",
+    "test:watch": "NODE_ENV=test vitest watch",
+    "test:coverage": "NODE_ENV=test vitest run --coverage"
   },
   "lint-staged": {
     "*.js": [
       "eslint . --fix",
-      "prettier . --write"
+      "prettier . --write",
+      "vitest related --run"
     ],
     "*.{json,yml,yaml,md}": "prettier --write ."
   },
@@ -29,12 +35,17 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/js": "^9.21.0",
+    "@vitest/coverage-v8": "^3.0.8",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
+    "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.2"
+    "prettier": "^3.5.2",
+    "redis-mock": "^0.56.3",
+    "supertest": "^7.0.0",
+    "vitest": "^3.0.8"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
